syntax = "proto3";

package auth;

option go_package = "internal/auth/proto";

message UserAuth {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message TokenRequest {
  string accessToken = 1;
}

message TokenResponse {
  string accessToken = 1;
  int64 expiresIn = 2;
}

message RoleResponse {
  string role = 1;         // пока только "registered" или "guest"
  bool authorized = 2;     // true, если пользователь зарегистрирован
}


service AuthService {
  rpc Login (UserAuth) returns (TokenResponse);
  rpc ValidateToken (TokenRequest) returns (RoleResponse);
  rpc RegisterUser (RegisterUserRequest) returns (TokenResponse);
}
